Fixes #381: Dataset items for the CRF data section are stored incorrectly. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@405 14881f01-568e-124b-961a-bb94932aa8d1